enhancement: added 'with term contracts' and 'with active term contracts' selection in status filter of customer search form

--- a/templates/default/customer/customersearch.html
+++ b/templates/default/customer/customersearch.html
@@ -629,6 +629,8 @@
 				<OPTION VALUE="56">{trans("suspended<!plural>")}</OPTION>
 				<OPTION value="59">{trans("without contracts")}</OPTION>
 				<OPTION value="76">{trans("without active contracts")}</OPTION>
+				<option value="84">{trans("with term contracts")}</option>
+				<option value="85">{trans("with active term contracts")}</option>
 				<OPTION value="60">{trans("with expired contracts")}</OPTION>
 				<OPTION value="77">{trans("with expired, active contracts")}</OPTION>
 				<OPTION value="61">{trans("with expiring contracts")}</OPTION>
