--- a/templates/default/rt/rtmessageview.html
+++ b/templates/default/rt/rtmessageview.html
@@ -137,7 +137,7 @@
 		</TD>
 		<TD{if $message.contenttype == 'text/html'} class="message-html-body"{/if}>
 			{if $message.contenttype == 'text/plain'}
-				<textarea rows="5" cols="100" readonly>{$message.body|trim|escape|message_quote}</textarea>
+				<textarea rows="5" cols="100" readonly>{trim($message.body)|escape|message_quote}</textarea>
 			{else}
 				{$message.body|message_quote}
 			{/if}
