--- a/templates/default/menu-panel.html
+++ b/templates/default/menu-panel.html
@@ -95,7 +95,12 @@
 			{foreach $newmenu as $menuindex => $menuitem}
 			<div id="menu-{$menuindex}" class="lms-ui-menu-item">
 				<div class="click-menu bottomline">
-					<div{if $menuitem.tip} {tip class="tip" text="\$a" a=$menuitem.tip bold=1}{else} class="tip"{/if}{if ! $menuitem.submenu} onClick="{if $menuitem.windowopen}window.open('{$menuitem.link}'); {else}return self.location.href = '{$menuitem.link}'; {/if}"{/if}>
+					<div{if $menuitem.tip}
+							{tip class="tip" text="\$a" a=$menuitem.tip bold=1}{else} class="tip"
+						{/if}
+						{if !empty($menuitem.submenu)}
+							onClick="{if !empty($menuitem.windowopen)}window.open('{$menuitem.link}');{else}return self.location.href = '{$menuitem.link}';{/if}"
+						{/if}>
 						<div class="box1">
 							{if isset($menuitem.img)}
 								<img src="img/{$menuitem.img}">
@@ -106,8 +111,8 @@
 						</div>
 					</div>
 					<div class="section">
-						{if $menuitem.submenu}
-							{foreach from=$menuitem.submenu item=submenuitem}
+						{if !empty($menuitem.submenu)}
+							{foreach $menuitem.submenu as $submenuitem}
 								<div{if $submenuitem.tip} {tip class="tip" text="\$a" a=$submenuitem.tip bold="1"}{else} class="tip"{/if}>
 									<div class="box2">
 										<a href="{$submenuitem.link|replace:"&":"&amp;"}">{$submenuitem.name}</a>
