bugfix: fixed typo in column header

--- a/templates/default/print/printukeincome.html
+++ b/templates/default/print/printukeincome.html
@@ -43,7 +43,7 @@
 		</TD>
 		{/if}
 		<TD WIDTH="30" CLASS="HEAD nobr" ALIGN="CENTER">
-			{trans("<!uke-income>Total sevices")}
+			{trans("<!uke-income>Total services")}
 		</TD>
 		{if ConfigHelper::checkConfig('privileges.superuser') || !ConfigHelper::checkConfig('privileges.hide_finances')}
 		<TD WIDTH="30" CLASS="HEAD nobr" ALIGN="CENTER">
