improvement: added lms-ui-icon-ignored/lms-ui-icon-ignore

--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -2058,3 +2058,12 @@
   }
 }
 
+.lms-ui-icon-ignore,
+.lms-ui-icon-ignored {
+  .fa-icon;
+  .far;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-stop-circle;
+  }
+}
