enhancement: sidusis: added technologies and customers presentation in hint popup for existing ranges (missed locale)

--- a/templates/default/net/netranges.html
+++ b/templates/default/net/netranges.html
@@ -318,7 +318,7 @@
             <td class="nobr">
                 <strong>{trans("Link type")}</strong>
                 <br>
-                <strong>{trans("Link technology")}</strong>
+                <strong>{trans("<!netrange>Link technology")}</strong>
             </td>
             <td class="nobr">
                 <strong>{trans("Download")}</strong>
