bugfix: small visual fix

--- a/templates/default/net/netranges.html
+++ b/templates/default/net/netranges.html
@@ -461,7 +461,7 @@
                                 </table>
                             {/if}
                         {/capture}
-                        {hint icon="checked" class="fa-fw" text=$hint}
+                        {hint icon="checked" text=$hint}
                     {/if}
                     <br>
                     {if !empty($building.linktechnologies)}
