improvement: sidusis: different icons on map for theoretical and real network ranges

--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -2067,3 +2067,21 @@
     content: @fa-var-stop-circle;
   }
 }
+
+.lms-ui-icon-netrange-theoretical {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-question-circle;
+  }
+}
+
+.lms-ui-icon-netrange-real {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-check-circle;
+  }
+}
