--- a/templates/default/user/userinfo.html
+++ b/templates/default/user/userinfo.html
@@ -25,7 +25,7 @@
 {/block}
 
 {block name="transactions"}
-	{if ConfigHelper::checkConfig('phpui.logging') && (ConfigHelper::checkConfig('privileges.superuser') || ConfigHelper::checkConfig('privileges.transaction_logs'))}
+	{if ConfigHelper::checkConfig('logs.enabled') && (ConfigHelper::checkConfig('privileges.superuser') || ConfigHelper::checkConfig('privileges.transaction_logs'))}
 		<TR>
 			<TD>
 				{include file="transactions.html"}
