--- a/templates/default/customer/customeredit.html
+++ b/templates/default/customer/customeredit.html
@@ -17,7 +17,7 @@
 	{include file="customer/customernetworksbox.html"}
 {/block}
 {block name="transactions"}
-	{if ConfigHelper::checkConfig('phpui.logging') && (ConfigHelper::checkConfig('privileges.superuser') || ConfigHelper::checkConfig('privileges.transaction_logs'))}
+	{if ConfigHelper::checkConfig('logs.enabled') && (ConfigHelper::checkConfig('privileges.superuser') || ConfigHelper::checkConfig('privileges.transaction_logs'))}
 			{include file="transactions.html"}
 	{/if}
 {/block}
