--- a/templates/default/customer/customerinfo.html
+++ b/templates/default/customer/customerinfo.html
@@ -24,7 +24,7 @@
 	{include file="customer/customernetworksbox.html"}
 {/block}
 {block name="transactions"}
-	{if ConfigHelper::checkConfig('phpui.logging') && ConfigHelper::checkPrivilege('transaction_logs')}
+	{if ConfigHelper::checkConfig('logs.enabled') && ConfigHelper::checkPrivilege('transaction_logs')}
 		{include file="transactions.html"}
 	{/if}
 {/block}
