--- a/templates/default/node/nodeedit.html
+++ b/templates/default/node/nodeedit.html
@@ -39,7 +39,7 @@
 	{include file="node/routednetworks.html"}
 {/block}
 {block name="transactions"}
-	{if ConfigHelper::checkConfig('phpui.logging') && (ConfigHelper::checkConfig('privileges.superuser') || ConfigHelper::checkConfig('privileges.transaction_logs'))}
+	{if ConfigHelper::checkConfig('logs.enabled') && (ConfigHelper::checkConfig('privileges.superuser') || ConfigHelper::checkConfig('privileges.transaction_logs'))}
 		{include file="transactions.html"}
 	{/if}
 {/block}
