--- a/templates/default/user/useredit.html
+++ b/templates/default/user/useredit.html
@@ -16,7 +16,7 @@
 	{/if}
 {/block}
 
-{if ConfigHelper::checkConfig('phpui.logging') && (ConfigHelper::checkConfig('privileges.superuser') || ConfigHelper::checkConfig('privileges.transaction_logs'))}
+{if ConfigHelper::checkConfig('logs.enabled') && (ConfigHelper::checkConfig('privileges.superuser') || ConfigHelper::checkConfig('privileges.transaction_logs'))}
 		{include file="transactions.html"}
 {/if}
 
