enhancement: non-empty 'phpui.node_empty_mac' value allows to disable mac requirement specification for nodes; mac address from this setting specifies fake-mac stored in database for nodes without any assigned macs (setting has no default value what means mac addresses are required for node)

--- a/templates/default/node/nodeaddbox.html
+++ b/templates/default/node/nodeaddbox.html
@@ -163,7 +163,7 @@
 											{icon name="mac"}
 										</td>
 										<td class="lms-ui-mac-address-selection" colspan="2">
-											{mac_address_selection form="nodedata" macs=$nodedata.macs}
+											{mac_address_selection form="nodedata" macs=$nodedata.macs node_empty_mac=$node_empty_mac}
 										</td>
 									</tr>
 
