--- a/templates/default/node/nodeeditbox.html
+++ b/templates/default/node/nodeeditbox.html
@@ -186,7 +186,7 @@
 											{trans("MAC address")}
 										</td>
 										<td class="lms-ui-mac-address-selection">
-											{mac_address_selection form="nodeedit" macs=$nodeinfo.macs}
+											{mac_address_selection form="nodeedit" macs=$nodeinfo.macs node_empty_mac=$node_empty_mac}
 										</td>
 									</tr>
 
