bugfix: sidusis: missed localisation

--- a/templates/default/net/netranges.html
+++ b/templates/default/net/netranges.html
@@ -328,7 +328,7 @@
             <td class="nobr">
                 <strong>{trans("Type")}</strong>
                 <br>
-                <strong>{trans("Services")}</strong>
+                <strong>{trans("<!netrange>Services")}</strong>
             </td>
             <td class="nobr">
                 <strong>{trans("<!netrange>Existing")}</strong>
