enhancement: new 'transfer' icon

--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -2085,3 +2085,12 @@
     content: @fa-var-check-circle;
   }
 }
+
+.lms-ui-icon-transfer {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-retweet;
+  }
+}
