improvement: sidusis/openlayers map: added address presentation in network range popup

--- a/css/map.less
+++ b/css/map.less
@@ -226,3 +226,9 @@ div.olControlPanel {
 .lmsRefreshButtonItemInactive {
 	background: white url('@{lms-img-path}/reload.gif');
 }
+
+.netrange-location {
+	text-decoration: underline;
+	display: inline-flex;
+	margin-bottom: 0.5em;
+}
