bugfix: sidusis: fixed 'existing' filter element support

--- a/templates/default/net/netranges.html
+++ b/templates/default/net/netranges.html
@@ -501,7 +501,7 @@
         <tr>
             <td colspan="7" class="text-center summary">
                 <strong>
-                    {t a=$total}<!netrange>Buildings: $a{/t},
+                    {t a=$unique_total}<!netrange>Buildings: $a{/t},
                     {t a=$ranges}<!netrange>Ranges: $a{/t},
                     {t a=$existing}<!netrange>Existing: $a{/t}
                 </strong>
