--- a/templates/default/dblist.html
+++ b/templates/default/dblist.html
@@ -48,7 +48,7 @@
 	{section name=dblist loop=$dblist.time}
 	<TR class="highlight {cycle}{if $dblist.dbv[dblist] != $layout.dbschversion} blend{/if}"  >
 		<TD onClick="return self.location.href='?m=dbview&amp;db={$dblist.name[dblist]}&amp;file=/lms-{$dblist.time[dblist]|date_format:"Ymd-His"}.sql{if $dblist.type[dblist]=="gz"}.gz{elseif $dblist.type[dblist]=="plain"}{/if}';">
-			<IMG src="img/time.gif" alt=""> {$dblist.time[dblist]|date_format:"Y/m/d H:i:s (l)"}
+			<IMG src="img/time.gif" alt=""> {$dblist.time[dblist]|date_format:"Y/m/d H:i:s"} ({trans($dblist.time[dblist]|date_format:"l")})
 		</TD>
 		<TD class="text-right nobr" onClick="return self.location.href='?m=dbview&amp;db={$dblist.name[dblist]}&amp;file=/lms-{$dblist.time[dblist]|date_format:"Ymd-His"}.sql{if $dblist.type[dblist]=="gz"}.gz{elseif $dblist.type[dblist]=="plain"}{/if}';">
 			{if $dblist.type[dblist]=="gz"}
