devel: insert block statement to document add template - for plugins purpose

--- a/templates/default/document/documentadd.html
+++ b/templates/default/document/documentadd.html
@@ -250,6 +250,8 @@
 		<tr id="referencedocument">
 			{include file="document/documentreference.html"}
 		</tr>
+		{block name="documentpluginreference"}
+		{/block}
 		<tr id="document-file-row"{if !$document.type} style="display: none;"{/if}>
 			<td>
 				{icon name="import"}
